เพิ่ม Textfield ให้ระบบชำระเบี้ยประกัน - fix #149
