# backend/docs/swagger.json
@@ -3092,6 +3092,12 @@
                 "moneytransferID": {
                     "type": "integer"
                 },
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
                 "transferTime": {
                     "type": "string"
                 }
@@ -3695,6 +3701,14 @@
                 "id": {
                     "description": "ID of the ent.",
                     "type": "integer"
+                },
+                "phone_number": {
+                    "description": "PhoneNumber holds the value of the \"phone_number\" field.",
+                    "type": "string"
+                },
+                "price": {
+                    "description": "Price holds the value of the \"price\" field.",
+                    "type": "number"
                 },
                 "transfer_time": {
                     "description": "TransferTime holds the value of the \"transfer_time\" field.",
